@@ -1,3 +1,12 @@
+2013-08-13  Mark Wielaard  <mjw@redhat.com>
+
+	* addr2line.c (options): Add "inlines", 'i'.
+	(show_inlines): New bool.
+	(parse_opt): Handle 'i'.
+	(print_diesym): New static function.
+	(print_src): New function taking code from...
+	(handle_address): here. Call print_src. Print inlines.
+
 2013-08-12  Mark Wielaard  <mjw@redhat.com>
 
 	* addr2line.c (main): If there is a newline char at end of buf,
